# Elden-Ring-NN

./: .gitignore  README.md  comming_soon.md  data_collection.py  er_environment.py  er_model.py  run.py
animation_files/000000/: 0.json  1090519040.json  120.json  19020.json  19021.json  19120.json  19621.json  20010.json  20011.json  20110.json  20111.json  20112.json  20113.json  202000.json  202020.json  202023.json  20210.json  202100.json  202200.json  202300.json  22100.json  22101.json  22102.json  23020.json  23120.json  27010.json  27110.json  (+69 more)
scripts/: CMakeLists.txt  animation_data_reader.py  animation_reset.py  data_collection.py  database_helper.py  enemies.py  er_agent.py  er_environment.py  er_helper.py  game_access.py  game_accessor.py  memory_access.py  player.py  speedhack.py  walk_back.py  webview.py
scripts/animation_files/soldier_of_godrick/: 10000.json  10100.json  11011.json  2002001.json  2002002.json  2002003.json  2002100.json  2003000.json  2003001.json  2003002.json  2003003.json  2003004.json  2003008.json  2005000.json  2005001.json  2005002.json  2005003.json  2006100.json  2007000.json  2007400.json  2008032.json  2008033.json  2008034.json  2008035.json  2008036.json  2008040.json  2008047.json  2008056.json  2008500.json  2009000.json  2009410.json  2009440.json  2009500.json  2011000.json  2043000.json
scripts/animation_files/soldier_of_godrick/unknown_animations/: 10000.json  2002000.json  2008043.json  2008046.json  2008121.json  2009410.json  2009440.json
scripts/place_cheat_table_here/: README.md
scripts/src/: AOBScanner.cpp
(+146 files in other folders)
